United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7128355 assert(!nocreate) failed: Cannot build a phi for a block already parsed
7128355 : assert(!nocreate) failed: Cannot build a phi for a block already parsed

Details
Type:
Bug
Submit Date:
2012-01-09
Status:
Closed
Updated Date:
2012-03-29
Project Name:
JDK
Resolved Date:
2012-03-29
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
8-pool
Fixed Versions:
hs23

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
Regression after 7125896 changes.

#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/jprt/P1/213046.vkozlov/source/src/share/vm/opto/parse1.cpp:1814), pid=11643, tid=17
#  assert(!nocreate) failed: Cannot build a phi for a block already parsed.
#
# JRE version: 7.0_04-b06
# Java VM: Java HotSpot(TM) 64-Bit Server VM (23.0-b10-internal-201201072130.vkozlov.7125896-fastdebug compiled mode solaris-amd64 )
# Core dump written. Default location: /export/local/57377.JDK7.NIGHTLY.VM_solaris-amd64_javase_server_comp_JT_HS/results/workDir/closed/compiler/6434117/TestNativeRevocation/core or core.11643
#
# If you would like to submit a bug report, please visit:
#   http://bugreport.sun.com/bugreport/crash.jsp
#

---------------  T H R E A D  ---------------

Current thread (0x0000000000fc7000):  JavaThread "C2 CompilerThread2" daemon [_thread_in_native, id=17, stack(0xfffffd7ffddac000,0xfffffd7ffdeac000)]

Stack: [0xfffffd7ffddac000,0xfffffd7ffdeac000],  sp=0xfffffd7ffdea7cf0,  free space=1007k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0x2779f04]  void VMError::report(outputStream*)+0x8c8;;  void VMError::report(outputStream*)+0x8c8
V  [libjvm.so+0x277b049]  void VMError::report_and_die()+0x4fd;;  void VMError::report_and_die()+0x4fd
V  [libjvm.so+0xee5033]  void report_vm_error(const char*,int,const char*,const char*)+0x55f;;  void report_vm_error(const char*,int,const char*,const char*)+0x55f
V  [libjvm.so+0x2274377]  PhiNode*Parse::ensure_phi(int,bool)+0x947;;  PhiNode*Parse::ensure_phi(int,bool)+0x947
V  [libjvm.so+0x226a57e]  void Parse::merge_common(Parse::Block*,int)+0xcda;;  void Parse::merge_common(Parse::Block*,int)+0xcda
V  [libjvm.so+0x2268f36]  void Parse::merge(int)+0xb6;;  void Parse::merge(int)+0xb6
V  [libjvm.so+0x2291e87]  void Parse::do_if(BoolTest::mask,Node*)+0xe3f;;  void Parse::do_if(BoolTest::mask,Node*)+0xe3f
V  [libjvm.so+0x229450e]  void Parse::do_one_bytecode()+0x4e2;;  void Parse::do_one_bytecode()+0x4e2
V  [libjvm.so+0x226870e]  void Parse::do_one_block()+0x576;;  void Parse::do_one_block()+0x576
V  [libjvm.so+0x22597e0]  void Parse::do_all_blocks()+0x2278;;  void Parse::do_all_blocks()+0x2278
V  [libjvm.so+0x2256f53]  Parse::Parse #Nvariant 1(JVMState*,ciMethod*,float)+0xa33;;  Parse::Parse(JVMState*,ciMethod*,float)+0xa33
V  [libjvm.so+0xabcc8a]  JVMState*ParseGenerator::generate(JVMState*)+0x102;;  JVMState*ParseGenerator::generate(JVMState*)+0x102
V  [libjvm.so+0xd37632]  Compile::Compile(ciEnv*,C2Compiler*,ciMethod*,int,bool,bool)+0x1166;;  Compile::Compile(ciEnv*,C2Compiler*,ciMethod*,int,bool,bool)+0x1166
V  [libjvm.so+0xabb897]  void C2Compiler::compile_method(ciEnv*,ciMethod*,int)+0x16b;;  void C2Compiler::compile_method(ciEnv*,ciMethod*,int)+0x16b
V  [libjvm.so+0xd5fe33]  void CompileBroker::invoke_compiler_on_method(CompileTask*)+0x14cb;;  void CompileBroker::invoke_compiler_on_method(CompileTask*)+0x14cb
V  [libjvm.so+0xd5dd0b]  void CompileBroker::compiler_thread_loop()+0xc8f;;  void CompileBroker::compiler_thread_loop()+0xc8f
V  [libjvm.so+0x2637844]  void JavaThread::thread_main_inner()+0x4d4;;  void JavaThread::thread_main_inner()+0x4d4
V  [libjvm.so+0x2637156]  void JavaThread::run()+0x61e;;  void JavaThread::run()+0x61e
V  [libjvm.so+0x21d5a9a]  java_start+0x6a6;;  java_start+0x6a6
C  [libc.so.1+0x121021]  _thrp_setup+0xa5;;  _thrp_setup+0xa5
C  [libc.so.1+0x1212c0]  _lwp_start+0x0;;  _lwp_start+0x0


Current CompileTask:
C2:   7832    2 % !b  4       TestNativeRevocation$RevokerThread::run @ 74 (128 bytes)

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/b0ff910edfc9
                                     
2012-03-22
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-rt/hotspot/rev/b0ff910edfc9
                                     
2012-01-18
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/b0ff910edfc9
                                     
2012-01-13
EVALUATION

Do not common BoxLock nodes and avoid creating phis of boxes. During parsing replace new BoxLock node with old BoxLock node at merge points. Use as_BoxLock()  which checks that node is BoxLockNode instead of BoxLockNode::box_node(). Call box_node() method only after RA which may create spills of BoxLock nodes.
                                     
2012-01-13
EVALUATION

Parse::ensure_phis_everywhere() method does not create Phi for BoxLockNode.
                                     
2012-01-09



Hardware and Software, Engineered to Work Together