7128355: assert(!nocreate) failed: Cannot build a phi for a block already parsed

Do not common BoxLock nodes and avoid creating phis of boxes.

Reviewed-by: never